// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex respects alignContent 1`] = `
<div
  className="css-3g5ko6"
/>
`;

exports[`Flex respects alignItems 1`] = `
<div
  className="css-h38yef"
/>
`;

exports[`Flex respects flexDirection 1`] = `
<div
  className="css-1xhj18k"
/>
`;

exports[`Flex respects flexWrap 1`] = `
<div
  className="css-4knjz3"
/>
`;

exports[`Flex respects justifyContent 1`] = `
<div
  className="css-8owaep"
/>
`;

exports[`Flex respects responsive display 1`] = `
<div
  className="css-1g5df7f"
/>
`;
